--- a/SpaceStationSystem/Properties/Resources.resx
+++ b/SpaceStationSystem/Properties/Resources.resx
@@ -127,7 +127,7 @@
   <data name="ShipClasses.json" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ShipClasses.json.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="ShipQueue2019.json" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ShipQueue2019.json.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="ShipQueue2019" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ShipQueue2019.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
